README: credit authors

--- a/README
+++ b/README
@@ -2,3 +2,10 @@ Information about this program can be found on the distribution site:
 
 	http://c2.com/morse
 
+This version is by:
+
+	Jim Wilson
+
+Based on original work by:
+
+	Ward Cunningham
