--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Information about this program can be found on the distribution site:
 
 This version is by:
 
-	Jim Wilson
+	Jim Wilson and others
 
 Based on original work by:
 
